# revela

./: .gitignore  API.md  ARCHITECTURE.md  CHANGES.md  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  README.md.backup  SUMMARY.md  medium-article.md  pyproject.toml  start-app.sh
.github/: copilot-instructions.md
application/: .env.example  app.py  config.py  main.py  ollama_client.py
application/.streamlit/: config.toml
application/static/css/: styles.css
application/static/js/: main.js
application/templates/: index.html
chrome-extension/: .gitignore  README.md  manifest.json  package-lock.json  package.json  popup.css  popup.html
chrome-extension/public/: manifest.json
chrome-extension/src/background/: background.js
chrome-extension/src/content/: content.css  content.js
chrome-extension/src/popup/: popup.css  popup.html  popup.js
chrome-extension/src/utils/: markdown.js
ollama-gemma/: Dockerfile  README.md
revela-app/: .env.example  Dockerfile  pyproject.toml  start-app.bat  start-app.sh
revela-app/src/: __init__.py  app.py  config_module.py  llm_code_executor.py  ollama_client.py  session_manager.py
revela-app/ui/static/: index.js  styles.css
revela-app/ui/templates/: index.html
